--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,24 @@
 /* write your override styles here */
+/* write your override styles here */
+#wall .tag-1 {
+    display: none;
+  }
+   #wall div[id="tag-2"]#tag-2 {
+    display: none;
+  }
+  div#wall div[id="tag-3"]#tag-3.slick{
+    display: none;
+  }
+   #wall .parent #tag-4{
+    display: none;
+  }
+  div#wall .parent div[id="tag-5"]#tag-5.slick {
+    display: none;
+  }
+  body div#wall div.parent div:last-child div#tag-6 {
+    display: none;
+  }
+  body div#wall div.parent div > div[id="tag-7"]#tag-7.slick{
+    display: none;
+  }
+  
